Introduce unified configuration for date formats (#61)